--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ html {
   width: 100%;
   position: absolute;
   height: 100%;
-  background: url("/bg.jpg") no-repeat center center/cover;
+  background: url("./bg.jpg") no-repeat center center/cover;
   z-index: -1;
   opacity: 0.9;
 }
@@ -384,7 +384,7 @@ html {
       <h1 class="section-heading">MY SKILLS</h1>
       <div class="container">
         <div class="item-1">
-          <div class="skill-images-1"><img src="/webdevelopment.png" alt="#" /></div>
+          <div class="skill-images-1"><img src="./webdevelopment.png" alt="#" /></div>
           <div class="about">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam
             expedita sequi soluta in, modi eaque praesentium amet labore quis a
@@ -392,7 +392,7 @@ html {
           </div>
         </div>
         <div class="item-2">
-          <div class="skill-images-2"><img src="/c lang.png lang.png" alt="#" /></div>
+          <div class="skill-images-2"><img src="./c lang.png lang.png" alt="#" /></div>
           <div class="about">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam
             expedita sequi soluta in, modi eaque praesentium amet labore quis a
